--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,14 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    dataBinding {
+        enabled true
+    }
 
     buildTypes {
         release {
@@ -31,4 +39,28 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //    Material Design
+    implementation 'com.google.android.material:material:1.2.1'
+    //    Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    GSON converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+//  logging interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
+    //    Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+//    Room & RxJava support
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+//    RxJava
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+//    Scalable unit sizes
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+//    Rounded image view
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
