adding models, responses and repositories

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,20 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 //    GSON converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    def lifecycle_version = "2.2.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Annotation processor
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 //  logging interceptor
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
     //    Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 //    Room & RxJava support
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
